[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/models/Alice_extends.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/giantess/Alice_body.gd" type="Script" id=2]
[ext_resource path="res://font/Alibaba-PuHuiTi-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scene/place_tip.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.23871
height = 0.948141

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[node name="alice" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00678205, 0.943205, -4.12288e-08 )
shape = SubResource( 1 )

[node name="model" parent="." instance=ExtResource( 1 )]

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 37.0
margin_top = 3.0
margin_right = 139.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="Button" parent="vbox"]
margin_right = 102.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "选择"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grow" type="Button" parent="vbox"]
margin_top = 38.0
margin_right = 102.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "变大"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shrunk" type="Button" parent="vbox"]
margin_top = 76.0
margin_right = 102.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "缩小"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop" type="Button" parent="vbox"]
margin_top = 114.0
margin_right = 102.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 2 )
text = "停止grow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove" type="Button" parent="vbox"]
margin_top = 152.0
margin_right = 102.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "删除对象"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_as" type="Button" parent="vbox"]
margin_top = 190.0
margin_right = 102.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "play as"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "暂时未实现"
}

[node name="close" type="Button" parent="vbox"]
margin_top = 228.0
margin_right = 102.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 2 )
text = "关闭菜单"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="place_tip" parent="." instance=ExtResource( 4 )]

[connection signal="input_event" from="." to="." method="_on_alice_input_event"]
[connection signal="pressed" from="vbox/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="vbox/grow" to="." method="_on_grow_pressed"]
[connection signal="pressed" from="vbox/shrunk" to="." method="_on_shrunk_pressed"]
[connection signal="pressed" from="vbox/stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="vbox/remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="vbox/close" to="." method="_on_close_pressed"]
